[CI] Fix dist directory

--- a/index.html
+++ b/index.html
@@ -42,5 +42,10 @@
 <br/>
 <a id="html-to-docx" download="html-to-docx.docx">Download (html-to-docx - if it's not clickable on Safari due to lookbehind error in the console, wait for https://github.com/privateOmega/html-to-docx/issues/41 or https://bugs.webkit.org/show_bug.cgi?id=174931 or Safari 16.4 https://developer.apple.com/documentation/safari-release-notes/safari-16_4-release-notes#New-Features)</a>
 </body>
+<br/>
+<br/>
+Repository source: <a href="https://github.com/t3rmian/html-to-docx-js-client-demo">https://github.com/t3rmian/html-to-docx-js-client-demo</a>
+<br/>
+Blog post: <a href="https://blog.termian.dev/posts/html-to-docx-js-client">https://blog.termian.dev/posts/html-to-docx-js-client</a>
 <script src="dist/main.js"></script>
 </html>
